# minime

./: .env.example  .gitignore  DEPLOYMENT.md  Database_Details.txt  Dockerfile  Dockerfile.celery  Dockerfile.graph  EXTENSIONS.md  Neo4j-18f792e8-Created-2026-03-15.txt  README.md  alembic.ini  alertmanager.yml  complete_audit_report.md  docker-compose.monitoring.yml  docker-compose.neo4j-cluster.yml  docker-compose.qdrant.yml  docker-compose.yml  fix-colors.js  grafana-dashboards.yml  haproxy.cfg  minime_master_reference.md  new_implementation_plan.md  prometheus-rules.yml  prometheus.yml  requirements-ci.txt  requirements.txt  scope_audit_report.md  setup.cfg  start-desktop.sh  start-minime.sh  test_ml_doc.txt
PitchDeck/: index.html
backend/: celery_app.py  config.py  main.py  models.py  requirements.txt
codex/: MINIME_DEEP_FUNCTION_AUDIT_2026-03-26.md  MINIME_PROJECT_ARCHITECTURE_2026-03-26.md  frontend_endpoint_inventory.txt  python_function_inventory.txt
desktop/: API_INTEGRATION.md  GITHUB_SECRETS.md  index.html  minime-tracker.py  package-lock.json  package.json  run-first-time.sh  tailwind.config.js  (+1 more)
desktop/src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
desktop/src-tauri/.keys/: minime-new.key  minime-new.key.pub  minime.key.pub
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: ai_chat.rs  batching.rs  commands.rs  database.rs  encryption.rs  focus_timer.rs  input.rs  lib.rs  local_search.rs  polling.rs  privacy.rs  screenshot.rs  settings.rs  setup.rs  sync.rs  tests.rs  tracker.rs  tray.rs
desktop/src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  wayland.rs  windows.rs
(+413 files in other folders)
