[package]
name = "minime-desktop"
version = "0.2.0"
description = "MiniMe Desktop Client - Activity Intelligence"
authors = ["MiniMe Team"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "native-tls"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41", features = ["full", "sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ring = "0.17"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.11", features = ["v4", "serde"] }
base64 = "0.22"
xcap = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }

# Platform-specific dependencies for window tracking
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xss"] }
